                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/61);
                        Minor doco improvements from the Debian project
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/60);
                        Minor coverage improvements by getting rid of some redundant
                          code paths;

2016-09-07      3.2001  Data updates

2016-06-05      3.2000  Bump version number because rpm is stupid and thinks
                          3.1 < 3.0014;
                        Recognize Isle of Man (IM) free/special-rate
                          numbers;
                        Data updates

2016-03-04      3.1     Added the format_using() method and the ability to
                          use third-party formatters, thanks to Michael
                          Schout for the suggestion;
                        Data updates

2015-12-08      3.0014  Deprecated APIs of being able to call most methods as
                          class methods or functions instead of object methods
                          have now been deleted;
                        Remove unnecessary N::P::NANP->country method - the
                          implementation in the superclass is sufficient;
                        Data updates

2015-11-04      3.0013  Fix another bug in the tests which threw up
                          misleading failures if a country-specific subclass
                          was installed

2015-10-26      3.0012  Updated dialing prefixes in N::P::Country
                          from Michael Gray;
                        Fix broken code for is_specialrate in stubs,
                          which previously always returned undef (ie
                          unknown) even when libphonenumber knew it was
                          eg premium rate (bug found by Gerhard Poul's
                          PR 46);
                        +44 3 numbers have is_specialrate set;