@@ -9,6 +9,6 @@ use Test::More;
 
 END { done_testing(); }
 
-use Number::Phone::Country qw(uk);
+use Number::Phone::Country qw(noexport uk);
 
 is(Number::Phone::Country::phone2country('+44 20 12345678'), 'UK', "can return UK instead of GB");
