@@ -9,7 +9,7 @@ use Test::More;
 
 END { done_testing(); }
 
-use Number::Phone::Country;
+use Number::Phone::Country qw(noexport);
 
 country_and_idd('+44 20 12345678', 'GB', '44', "phone2country_and_idd works for GB");
 country_and_idd('212 333 3333',    'US',  '1', "phone2country_and_idd works for US");
